<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="25dp">


<androidx.appcompat.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="25dp">


    <ImageView
        android:id="@+id/close"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/ic_x_solid" />

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/check_reservation" />

    <TextView
        android:id="@+id/reservation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/rubik_medium"
        android:text="@string/r_servation_r_ussite"
        android:textColor="#192B53"
        android:visibility="gone"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/confirm_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/rubik_medium"
        android:text="@string/confirmer_la_r_servation"
        android:textColor="#192B53"
        android:textSize="22sp" />

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="#C6FFED"
        app:cardCornerRadius="15dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/rubikregular"
                android:text="Vendredi 13/13/2020"
                android:textColor="#192B53"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/hour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/rubikregular"
                android:text="13:00 h"
                android:textColor="#192B53"
                android:textSize="13sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center"
            android:fontFamily="@font/rubikregular"
            android:text="@string/veuillez_attendre_la_confirmation_du"
            android:textColor="#FE0000"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/provider_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/rubikregular"
            android:text="Dr Saadoui"
            android:textColor="#FE0000"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/confirmer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/rubikregular"
            android:layout_marginTop="10dp"
            android:text="@string/confirmer"
            android:textColor="#FE0000"
            android:textSize="13sp" />




</androidx.appcompat.widget.LinearLayoutCompat>
</com.google.android.material.card.MaterialCardView>