<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.auth.LoginFragment">

    <data>

        <variable
            name="LoginFragment"
            type="com.example.android.ui.auth.LoginFragment" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blueBackground">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="43dp"
            android:layout_height="43dp"
            android:layout_marginStart="-13dp"
            android:layout_marginTop="-2dp"
            android:contentDescription="@string/todo"
            app:layout_constraintStart_toStartOf="@+id/RdvTextClient"
            app:layout_constraintTop_toTopOf="@+id/RdvTextClient"
            app:srcCompat="@drawable/dot" />

        <TextView
            android:id="@+id/RdvTextClient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:fontFamily="@font/abdoullahashgarregular"
            android:text="@string/rendez_vous"
            android:textColor="@color/white"
            android:textSize="48sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardClient"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="-35dp"
            app:cardBackgroundColor="@color/background_grey"
            app:cardCornerRadius="35dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/RdvTextClient">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true"
                tools:ignore="SpeakableTextPresentCheck">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="35dp">

                    <TextView
                        android:id="@+id/loginTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="35dp"
                        android:layout_marginTop="50dp"
                        android:fontFamily="@font/rubik_bold"
                        android:text="@string/bienvenu"
                        android:textSize="25sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/userNameLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:fontFamily="@font/rubikregular"
                        android:text="@string/pseudo"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="@+id/loginTxt"
                        app:layout_constraintTop_toBottomOf="@id/loginTxt" />

                    <TextView
                        android:id="@+id/start"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="3dp"
                        android:fontFamily="@font/rubikregular"
                        android:text="*"
                        android:textColor="@color/red"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="@+id/userNameLabel"
                        app:layout_constraintStart_toEndOf="@+id/userNameLabel"
                        app:layout_constraintTop_toTopOf="@+id/userNameLabel"
                        tools:ignore="TextContrastCheck" />

                    <EditText
                        android:id="@+id/pseudoUserEditTxt"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="35dp"
                        android:background="@drawable/edittext_bg"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/userNameLabel"
                        app:layout_constraintTop_toBottomOf="@id/userNameLabel"
                        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

                    <TextView
                        android:id="@+id/pwUserLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:fontFamily="@font/rubikregular"
                        android:text="@string/mot_de_passe"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="@+id/loginTxt"
                        app:layout_constraintTop_toBottomOf="@id/pseudoUserEditTxt" />

                    <TextView
                        android:id="@+id/start1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="3dp"
                        android:fontFamily="@font/rubikregular"
                        android:text="*"
                        android:textColor="@color/red"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="@+id/pwUserLabel"
                        app:layout_constraintStart_toEndOf="@+id/pwUserLabel"
                        app:layout_constraintTop_toTopOf="@+id/pwUserLabel"
                        tools:ignore="TextContrastCheck" />

                    <com.google.android.material.textfield.TextInputLayout

                        android:id="@+id/client2PwEye"
                        android:layout_width="0dp"
                        android:layout_height="42dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="35dp"
                        android:background="@drawable/edittext_bg"
                        app:boxBackgroundColor="@android:color/transparent"
                        app:boxStrokeColor="@color/white"
                        app:boxStrokeWidth="0dp"
                        app:boxStrokeWidthFocused="0dp"
                        app:endIconTint="@color/textBlueColor"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/loginTxt"
                        app:layout_constraintTop_toBottomOf="@id/pwUserLabel"
                        app:passwordToggleEnabled="true"
                        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck">

                        <EditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/edittext_bg"
                            android:inputType="textPassword"
                            android:paddingTop="9dp"
                            android:paddingBottom="10dp"
                            android:textColor="@color/black"
                            android:textColorHint="@color/white" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/forgetPw"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/rubikregular"
                        android:onClick='@{() -> LoginFragment.goToForgetPw() }'
                        android:text="@string/forgetPw"
                        android:textColor="@color/blueError"
                        android:textSize="12sp"
                        app:layout_constraintEnd_toEndOf="@+id/client2PwEye"
                        app:layout_constraintTop_toBottomOf="@+id/client2PwEye"
                        tools:ignore="MissingConstraints,TextContrastCheck" />


                    <Button
                        android:id="@+id/connexionUserButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="70dp"
                        android:layout_marginEnd="40dp"
                        android:layout_marginBottom="100dp"
                        android:backgroundTint="@color/aqua_500"
                        android:fontFamily="@font/rubikregular"
                        android:onClick='@{() -> LoginFragment.login()}'
                        android:text="@string/connexion"
                        android:textAllCaps="false"
                        android:textSize="16sp"
                        app:cornerRadius="14dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/loginTxt"
                        app:layout_constraintTop_toBottomOf="@+id/client2PwEye" />

                    <TextView
                        android:id="@+id/inscrire"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:fontFamily="@font/rubikregular"
                        android:onClick='@{() -> LoginFragment.goToBonjourScreen()}'
                        android:text="@string/inscrire"
                        android:textSize="12sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/connexionUserButton"
                        tools:ignore="MissingConstraints,TextContrastCheck" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </ScrollView>
        </com.google.android.material.card.MaterialCardView>

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>