<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.provider_home.ProviderHomeFragment">

    <data>

        <variable
            name="ProviderHomeFragment"
            type="com.example.android.ui.provider_home.ProviderHomeFragment" />
    </data>


    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_grey"
        tools:ignore="SpeakableTextPresentCheck">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardPhoto"
                android:layout_width="40dp"
                android:layout_height="36dp"
                android:layout_margin="25dp"
                android:checkable="true"
                android:clickable="true"
                android:focusable="true"
                app:cardCornerRadius="50dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:strokeColor="@color/aqua_500"
                app:strokeWidth="4dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp">

                    <ImageView
                        android:id="@+id/img"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:onClick='@{() -> ProviderHomeFragment.goToProfile()}'
                        android:scaleType="fitXY"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>


            <ImageView
                android:id="@+id/imageView"
                android:onClick='@{() -> ProviderHomeFragment.goToNotification()}'
                android:layout_width="40dp"
                android:layout_height="36dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:contentDescription="@string/todo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/notification" />

            <TextView
                android:id="@+id/bonjour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="70dp"
                android:fontFamily="@font/rubik_bold"
                android:text="@string/bonjour"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/rubik_bold"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="@id/bonjour"
                app:layout_constraintTop_toBottomOf="@id/bonjour" />

            <TextView
                android:id="@+id/point"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/rubik_bold"
                android:text="@string/exclamation_point"
                android:textSize="30sp"
                app:layout_constraintStart_toEndOf="@id/user"
                app:layout_constraintTop_toBottomOf="@id/bonjour" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/ads_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="25dp"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user" />

            <EditText
                android:id="@+id/search"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="35dp"
                android:background="@drawable/edittext_bg"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/bonjour"
                app:layout_constraintTop_toBottomOf="@id/ads_recycler_view"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/offer_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/rubik_bold"
                android:text="@string/mes_offres"
                android:textColor="#192B53"
                android:textSize="25sp"
                app:layout_constraintStart_toStartOf="@id/search"
                app:layout_constraintTop_toBottomOf="@id/search" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/offer_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="25dp"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="@+id/bonjour"
                app:layout_constraintTop_toBottomOf="@id/offer_txt"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>